--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,7 +1,6 @@
 .btn {
     display: block;
-    margin: auto;
-    margin-top: 30px;
+    margin: 30px auto ;
     padding: 15px;
     cursor: pointer;
     background: #525252;
